Feature: Support other connection factories such as XAConnectionFactory